database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: http2
  selector:
    app: database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: db
        image: mysql:8.0.22
        ports:
          - containerPort: 3306
